@@ -3,6 +3,9 @@
 |= CHANGELOG GEPI =|
 |==================|
 
+Gepi-master (Version de développement)
+===========================
+
 Gepi-1.7.0 (24/11/2016)
 ===========================
 
